--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,17 @@ jobs:
           npm install
       - run: |
           npm run all
-  test: # make sure the action works on a clean machine without building
+  test-dev: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
+    environment: dev
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./
+        with:
+          milliseconds: 1000
+  test-qa: # make sure the action works on a clean machine without building
+    runs-on: ubuntu-latest
+    environment: qa
     steps:
       - uses: actions/checkout@v3
       - uses: ./
