--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          milliseconds: 1000
+          my_secret: ${{secret.MY_SECRET}}
   test-qa: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     environment: qa
@@ -30,4 +30,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          milliseconds: 1000
+          my_secret: ${{secret.MY_SECRET}}
