--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,3 +31,11 @@ jobs:
       - uses: ./
         with:
           my_secret: ${{secrets.MY_SECRET}}
+  test-lti: # make sure the action works on a clean machine without building
+    runs-on: ubuntu-latest
+    environment: lti
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./
+        with:
+          my_secret: ${{secrets.MY_SECRET}}
